[package]
name = "RustCogniteGui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cognite = { git = "https://github.com/cognitedata/cognite-sdk-rust" }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.115"
futures = "0.3.30"
